# TeLLer

./: .gitignore  Arbitrary.hs  Bag.hs  Logic.hs  Makefile  Parser.hs  Printer.hs  ProverState.hs  README  README.md  Reductions.hs  Rewrite.hs  RewriteRules.hs  Syntax.hs  TeLLer.cabal  Test.hs  TestRunner.hs  Util.hs  linear-logic.cabal  linear-logic.hs
docs/report/: bibliography.bib  report.bbl  report.tex
docs/user-guide/: user-guide.tex
example/: a  c  e  f  formula1.txt  i  j
examples/: 001  003  006  007  010  011  012  bt0  bt4  formula2.txt  named-actions
examples/celf2graph/: 000.clf  LPNMR13-01.clf  LPNMR13-madamebovary.clf  madamebovary.clf
extra/windows7/: Instructions.txt  celf.bat
report/: .gitignore  report.blg
src/: Arbitrary.hs  Bag.hs  CGraph.hs  CLI.hs  CLINoReadLine.hs  CausalityGraph.hs  CausalityGraphQueries.hs  CelfToGraph.hs  CelfToGraphConf.hs  CelfToGraphParser.hs  Main.hs  Parser.hs  Printer.hs  ProverState.hs  ReductionRules.hs  Reductions.hs  Rewrite.hs  RewriteRules.hs  Syntax.hs  Term.hs  UserIO.hs  Util.hs
tests/: Test.hs  TestRunner.hs
user-guide/: .gitignore
