Name:                teller
Version:             0.1.9
Description:         An interactive linear logic forward chaining theorem explorer
License:             GPL
License-file:        LICENSE
Author:              Andy Kitchen and Joao F. Ferreira
Maintainer:          joao@joaoff.com
Build-Type:          Simple
Cabal-Version:       >= 1.2

Flag readline
  Description: Use Readline
  Default: True

Executable TeLLer
  Main-is:           Main.hs
  hs-source-dirs:    src/ tests/
  other-modules:
    Paths_teller
  Other-Modules:     Arbitrary,
                     Bag,
                     Parser,
                     Printer,
                     Rewrite,
                     RewriteRules,
                     Setup,
                     Syntax,
                     Test,
                     Util,
                     Parser

  Build-Depends:
    base >= 3 && < 5,
    containers >= 0.4 && < 2,
    random >= 1 && < 2,
    parsec >= 3 && < 4,
    QuickCheck >= 2 && < 3,
    directory,
    mtl,
    graphviz,
    fgl,
    text

  if flag(readline)
    Build-Depends:
     readline

    CPP-Options: -D__USE_READLINE__

Executable CelfToGraph
  Main-is:           CelfToGraph.hs
  hs-source-dirs:    src/ tests/
  other-modules:
    Paths_teller
  Other-Modules:     Setup,
                     Util

  Build-Depends:
    base >= 3 && < 5,
    containers >= 0.4 && < 2,
    random >= 1 && < 2,
    parsec >= 3 && < 4,
    QuickCheck >= 2 && < 3,
    directory,
    mtl,
    graphviz,
    fgl,
    text,
    cmdargs,
    process

  if flag(readline)
    Build-Depends:
     readline

    CPP-Options: -D__USE_READLINE__

